feat: 完成多模块功能迭代与系统优化
本次提交包含大量功能完善与系统优化工作：
1. 新增多个业务页面：电力基站/标签管理、效益分析、特种设备、特殊预警、采购申请、仓库出入库/调拨/报废等页面
2. 完善数据库补丁：新增资产分类、计量单元等基础表，补全各业务模块字典与字段
3. 优化前端组件：增强Crud/MasterDetail组件能力，修复不良事件列表字段映射问题
4. 调整路由与菜单：重构维修、保养、计量等模块菜单结构，修正重定向逻辑
5. 补充后端接口：新增大屏监控、计量/巡检/PM模块控制器，完善采购验收关联入库单逻辑
6. 优化导入配置：完善设备资产导入字段映射